# betann

./: CMakeLists.txt  README.md  hello_world.cc
.github/workflows/: build.yml
betann/: betann.h  binary.h  buffer.h  data_type.h  device.cc  device.h  kernels.cc  kernels.h  kernels_helper.cc  kernels_helper.h  math.cc  math.h  matmul.cc  matmul.h  preprocessor.cc  preprocessor.h  reduce.cc  reduce.h  utils.cc  utils.h
betann/wgsl/: arange.wgsl  bin2h.cmake  binary.wgsl  binary_contiguous.wgsl  binary_general.wgsl  binary_ops.wgsl  constants.wgsl  copy_contiguous.wgsl  copy_general.wgsl  copy_general_both.wgsl  gemv.wgsl  gemvt.wgsl  random.wgsl  random_contiguous.wgsl  random_general.wgsl  random_utils.wgsl  reduce_all.wgsl  reduce_last.wgsl  reduce_none.wgsl  reduce_ops.wgsl  reduce_row.wgsl  shader2h.cmake  sort_block.wgsl  sort_block_contiguous.wgsl  unary.wgsl  unary_general.wgsl  unary_ops.wgsl  utils.wgsl
src/: betann.h  device.cc  device.h
tests/: arange_tests.cc  betann_tests.h  binary_test.cc  binary_tests.cc  copy_tests.cc  gemv_tests.cc  matmul_tests.cc  random_tests.cc  reduce_tests.cc  sort_tests.cc  unary_tests.cc
